# fotw

./: .gitignore  background.js  com.josephcourtney.fotw.json  content.js  fotw.py  manifest.json  models.py  popup.html  test.py  test_message.json  user_data.db
browser_extension/: background.js  content.js  manifest.json
receiver/: browser_data.db  config.json  config.py  database.py  events.py  models.py  server.py  validation.py
syrphid_extension/: README.md  background.js  content.js  event_schema.json  manifest.json  options.html  options.js  popup.html  popup.js  styles.css
syrphid_extension/background/: background.js  config.js  constants.js  handlers.js  listeners.js  logger.js  messageHandlers.js  state.js  utils.js  websocket.js
syrphid_extension/content/: buffer.js  config.js  content.js  eventConfigurations.js  eventHandler.js  logger.js  stateFetcher.js  utils.js
syrphid_server/: README.md  pyproject.toml  requirements.txt
syrphid_server/src/syrphid/: __main__.py  server.py
