
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syrphid"
version = "0.0.1"
description = "stream and store all browser activity"
readme = "README.md"
license = { text = "CC BY-NC-SA" }
authors = [
    { name = "Joseph M Courtney", email = "5942706+josephcourtney@users.noreply.github.com" },
]
maintainers = [
    { name = "Joseph M Courtney", email = "5942706+josephcourtney@users.noreply.github.com" },
]
dependencies = [
    "pydantic>=2.8.0,<3.0",
    "sqlalchemy>=2.0.14,<3.0",
    "sqlmodel>=0.0.19,<0.1",
    "websockets>=10.0,<11.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]


[project.scripts]
syrphid = "syrphid.__main__:run"

[project.urls]
homepage = "https://github.com/yourusername/syrphid_server"
repository = "https://github.com/yourusername/syrphid_server"
documentation = "https://yourusername.github.io/syrphid_server"

[tool.hatch.version]
path = "src/syrphid/__init__.py"

[tool.mypy]
files = ["tests"]
no_implicit_optional = true
check_untyped_defs = true
